# scientific_computing_tools_for_advanced_mathematical_modelling_25_26

./: .gitignore  README.md  common_functions.py  elastic_pb.py  layered_pressure.py  pyproject.toml  setup.py
dockerfile/codespace/: Dockerfile.txt
src/: common_functions.py  create_grid.py  elastic_pb.py  main.py  main_layered_grid.py  main_layered_grid_hole.py  main_unit_grid.py  main_unit_grid_hole.py
